[project]
name = "python-coding-test"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "pytest>=8.3.5",
]

# pytest 설정
[tool.pytest.ini_options]
pythonpath = [
    "src",
]

testpaths = [
    "tests",
]
addopts = [
    "--tb=short",
    "--disable-warnings",
]
python_files = [
    "test_*.py",
    "*.tests.py",
    "*.tests.test_*.py",
]
python_classes = [
    "Test*",
]
python_functions = [
    "test_*",
    "Test*",
]


[tool.ruff]
# 파이썬 버전 설정
target-version = "py312"

# 라인 길이 설정
line-length = 88

# 파일 포함/제외 설정
extend-include = ["*.ipynb"]

[tool.ruff.lint]
# 활성화할 룰셋
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
]

# 무시할 룰들
ignore = [
    "E501",  # 라인 길이 (formatter가 처리)
]

# 디렉토리별 설정
[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # __init__.py에서 unused import 허용

[tool.ruff.format]
# 포맷터 설정
quote-style = "double"
indent-style = "space"


[tool.ruff.lint.isort]
# import 정렬 설정
known-first-party = ["your_project_name"]
